# usf-platform

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/tests/: conftest.py  test_abac.py  test_context_router.py  test_health.py
apps/api/usf_api/: config.py  main.py  models.py
apps/api/usf_api/middleware/: abac.py  context_router.py  prov_emitter.py  rate_limit.py  response_envelope.py  security_headers.py
apps/api/usf_api/routers/: auth.py  contexts.py  health.py  metrics.py  query.py  search.py
apps/api/usf_api/services/: auth.py  cache.py  tenant.py
apps/audit/: Dockerfile  pyproject.toml
apps/audit/tests/: conftest.py  test_audit.py
apps/audit/usf_audit/: config.py  db.py  main.py  models.py
apps/audit/usf_audit/routers/: export.py  lineage.py  log.py  stats.py
apps/audit/usf_audit/services/: audit_writer.py  egeria_bridge.py  kafka_consumer.py  lineage_tracer.py
apps/ingest/: Dockerfile  pyproject.toml
apps/ingest/tests/: conftest.py  test_pipelines.py
apps/ingest/usf_ingest/: config.py  db.py  main.py  models.py  worker_client.py
apps/ingest/usf_ingest/pipelines/ontorag/: __init__.py  bootstrap_runner.py  ontology_extractor.py  sdl_generator.py  skos_aligner.py
apps/ingest/usf_ingest/pipelines/semi_structured/: cim_parser.py  fhir_parser.py  jsonld_parser.py  schema_aligner.py
apps/ingest/usf_ingest/pipelines/structured/: dlt_pipeline.py  ontop_loader.py  r2rml_generator.py  schema_introspect.py
apps/ingest/usf_ingest/pipelines/unstructured/: __init__.py  arcadedb_builder.py  chunker.py  confidence_filter.py  docling_parser.py  langextract_runner.py  pipeline.py  rdf_bridge.py
apps/ingest/usf_ingest/routers/: bootstrap.py  jobs.py  sources.py
apps/ingest/usf_ingest/utils/: confidence.py  openlineage.py
apps/kg/: Dockerfile  README.md  pyproject.toml
apps/kg/tests/: conftest.py  test_entity_resolution.py
apps/kg/usf_kg/: config.py  main.py  models.py
apps/kg/usf_kg/routers/: entities.py  graphs.py  ontology.py  provenance.py  triples.py  validate.py
apps/kg/usf_kg/services/: arcadedb.py  entity_resolution.py  qlever.py  shacl_service.py
apps/mcp/: Dockerfile  pyproject.toml
apps/mcp/tests/: conftest.py  test_tools.py
apps/mcp/usf_mcp/: client.py  config.py  main.py  validation.py
apps/mcp/usf_mcp/tools/: contexts.py  entities.py  metrics.py
apps/query/: Dockerfile  pyproject.toml
apps/query/tests/: conftest.py  test_nl2sparql.py  test_query_router.py
apps/query/usf_query/: config.py  main.py  models.py
apps/query/usf_query/routers/: compile.py  execute.py  explain.py
apps/query/usf_query/services/: arcadedb_client.py  nl2sparql.py  ograg.py  ontop_client.py  qlever_client.py  query_router.py  sql_generator.py  wren_client.py
apps/sdl/: Dockerfile  pyproject.toml
apps/sdl/tests/: conftest.py  test_compilers.py
apps/sdl/usf_sdl_svc/: config.py  main.py
apps/sdl/usf_sdl_svc/routers/: compile.py  diff.py  ontology.py  validate.py  versions.py
apps/sdl/usf_sdl_svc/services/: owl_compiler.py  r2rml_gen.py  skos_aligner.py  sql_compiler.py
apps/ui/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  playwright.config.ts
apps/ui/.angular/cache/21.2.5/usf-scaffold/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
apps/ui/e2e/: pilot.spec.ts
apps/ui/src/: index.html  styles.css
apps/ui/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
apps/ui/src/app/core/: models.ts
apps/ui/src/app/core/api/: api.service.ts  mock.service.ts
apps/ui/src/app/core/auth/: auth.guard.ts  auth.service.ts
apps/ui/src/app/features/audit/: log.component.css  log.component.html  log.component.ts
apps/ui/src/app/features/auth/login/: login.component.css  login.component.html  login.component.ts
apps/ui/src/app/features/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
apps/ui/src/app/features/ingestion/monitor/: monitor.component.css  monitor.component.html  monitor.component.ts
apps/ui/src/app/features/kg-explorer/explorer/: explorer.component.css  explorer.component.html  explorer.component.ts
apps/ui/src/app/features/onboarding/wizard/: wizard.component.css  wizard.component.html  wizard.component.ts
apps/ui/src/app/features/sdl-editor/: editor.component.css  editor.component.html  editor.component.ts
apps/ui/src/app/layout/: shell.component.css  shell.component.html  shell.component.ts
apps/ui/src/app/shared/pipes/: rdf-curie.pipe.ts  relative-time.pipe.ts
apps/ui/src/styles/: tokens.css
apps/worker/: Dockerfile  pyproject.toml
apps/worker/tests/: conftest.py  test_tasks.py
apps/worker/usf_worker/: beat.py  celery_app.py  main.py
apps/worker/usf_worker/tasks/: audit.py  cache.py  ingest.py  ontology.py  sdl.py
docs/api/: API_REFERENCE.md
docs/architecture/: README.md  api-contracts.md  database-schemas.sql  named-graph-convention.md  openlineage-events.md  prov-o-templates.md  sdl-schema.md
docs/ontologies/: fhir-healthcare.md  fibo-banking.md  iec-cim-energy.md  rami40-manufacturing.md
docs/sdl/: LANGUAGE_REFERENCE.md
infra/docker/: .env.example  README.md  docker-compose.yml  generate_keys.sh  loki-config.yml  prometheus.yml  prometheus_rules.yml  promtail-config.yml  security-checklist.md
infra/docker/grafana/provisioning/dashboards/: dashboard.yml  usf_kg_stats.json  usf_overview.json
infra/docker/init/opa/policies/: usf.rego  usf_data_governance.rego  usf_tenancy.rego
infra/docker/init/postgres/: 01_init.sql
infra/docker/prometheus/: prometheus.yml
pilot/fibo-banking/: 01_extraction_demo.ipynb  DEMO.md  README.md  load_aml_dataset.py  requirements.txt  run_pilot.py
pilot/fibo-banking/queries/: 01_total_exposure.sparql  02_connected_accounts.sparql  03_suspicious_transactions.sparql  04_nl_demo.txt
sidecars/ontop/: usf.obda  usf.owl  usf.properties
sidecars/opa/policies/: usf.rego
sidecars/wren/etc/: config.properties
(+15 files in other folders)
