[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usf-audit"
version = "0.1.0"
description = "USF Audit Service — append-only audit log, lineage, PROV-O export"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "psycopg[async]>=3.2",
    "loguru>=0.7",
    "httpx>=0.27",
    "rdflib>=7.0",
    "aiokafka>=0.11",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["usf_audit"]
