[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usf-audit"
version = "0.1.0"
description = "USF Audit Service — append-only audit log, lineage tracing, PROV-O export"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "psycopg[async]>=3.2",
    "loguru>=0.7",
    "httpx>=0.27",
    "rdflib>=7.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "aiokafka>=0.11",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["usf_audit"]

[tool.ruff]
line-length = 100
target-version = "py312"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=4.0",
]
