[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usf-kg"
version = "0.1.0"
description = "USF Knowledge Graph service — QLever + ArcadeDB + SHACL"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "psycopg[async]>=3.2",
    "loguru>=0.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "usf-core",
    "usf-rdf",
    "usf-sdl-schema",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff", "mypy", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["usf_kg"]

[tool.hatch.metadata]
allow-direct-references = true
