[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usf-mcp"
version = "0.1.0"
description = "USF MCP Server — AI agent tools via fastmcp"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.9",
    "httpx>=0.27",
    "loguru>=0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "usf-core",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
]

[tool.hatch.build.targets.wheel]
packages = ["usf_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=4.0",
]
