[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usf-query"
version = "0.1.0"
description = "USF Query Service — SQL, SPARQL, NL2SPARQL, OG-RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "psycopg[async]>=3.2",
    "loguru>=0.7",
    "httpx>=0.27",
    "sqlglot>=25.0",
    "openai>=1.30",
    "rdflib>=7.0",
    "pyshacl>=0.25",
    "usf-core",
    "usf-rdf",
    "usf-sdl-schema",
]

[tool.hatch.build.targets.wheel]
packages = ["usf_query"]

[tool.hatch.metadata]
allow-direct-references = true
