[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usf-sdl"
version = "0.1.0"
description = "USF SDL compiler service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "psycopg[async]>=3.2",
    "loguru>=0.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rdflib>=7.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "owlrl>=6.0",
    "sqlglot>=25.0",
    "pyyaml>=6.0",
    "usf-core",
    "usf-rdf",
    "usf-sdl-schema",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["usf_sdl_svc"]

[tool.hatch.metadata]
allow-direct-references = true
