[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usf-worker"
version = "0.1.0"
description = "USF Worker Service — Celery task queue for async pipeline execution"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4",
    "redis>=5.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "sqlmodel>=0.0.19",
    "psycopg[async]>=3.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "usf-core",
    "usf-rdf",
    "usf-sdl-schema",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["usf_worker"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"
